crates/ddlog-syntax/tests/validation/fail/too_many_function_arg_commas.dl
// kind:item validate:true pass:false ignore:false
fn foo(foo: Bar,, bar: Baz) {}
